# gitlab-dr

./: README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
gitlab_dr/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_repos_as_files.py
